--- a/ktsorter-fx/pom.xml
+++ b/ktsorter-fx/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>rafael.ktsorter</groupId>
         <artifactId>ktsorter</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>ktsorter-fx</artifactId>
@@ -14,19 +14,19 @@
     <name>KTsorter - FX</name>
 
     <properties>
-        <tornadofx.version>1.7.17</tornadofx.version>
+        <tornadofx.version>1.7.20</tornadofx.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>rafael.ktsorter</groupId>
             <artifactId>ktsorter-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>12</version>
+            <version>18.0.1</version>
         </dependency>
         <dependency>
             <groupId>no.tornado</groupId>
@@ -37,7 +37,7 @@
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
+<!--        <testSourceDirectory>src/test/kotlin</testSourceDirectory>-->
 
         <plugins>
             <plugin>
